# Group18__Testing

./: .gitmodules  CMakeLists.txt  run.sh  test.sh
CalculatorCore/: CMakeLists.txt
CalculatorCore/src/: Calculator.cpp  calculator.h  main.cpp
CalculatorMain/: CMakeLists.txt
CalculatorMain/src/: main.cpp  main.h
CalculatorTest/: CMakeLists.txt  test.h  test2.cpp
CalculatorTest/src/: test.cpp  test.h
